Fixed a bug where some of the content was overflowing on the page

--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,29 @@
     --title-color:black;
     --button-color:black;
 }
+html{
+    min-height:100%;
+    position:relative;
+}
 *{
     font-family: 'Playfair Display', sans-serif;
 }
 body{
     margin:0;
     padding:0;
-    width:100vh;
-    height:100vh;
-    z-index: 0;
+    width:100%;
+    height:100%;
 }
 
 .wrapper{
-    width:100vw;
-    height:100%;
+    overflow:auto;
     background-image: url("library.jpg");
+    background-size: cover;
+    position: absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
 }
 
 header{
@@ -41,6 +49,7 @@ input[type = "checkbox"]{
 }
 p{
     color:red;
+    text-align: center;
     display: none;
 }
 
@@ -59,11 +68,12 @@ form{
     align-items: center;
     justify-content: space-around;
     position: absolute;
-    top:20%;
-    left:35%;
+    left: 50%;
+    top:200px;
+    margin-left:-150px;
     z-index:4;
+    width:300px;
     height:500px;
-    width:400px;
     padding:0px 10px;
     background-color: rgb(207, 158, 93);
     border-radius: 10px;
@@ -84,8 +94,8 @@ label{
     width:100px;
     height:100px;
     clip-path: circle(50% at 50% 50%);
-    background-color: wheat;
-    margin:0px 10px 10px 0px;
+    background-color: rgb(255, 166, 0);
+    margin:0px 15px 15px 0px;
     z-index: 5;
 }
 
@@ -126,7 +136,7 @@ label{
     display:grid;
     justify-content: center;
     grid-template-columns: repeat(auto-fill, 250px);
-    width:1200px;
+    width:min(1200px,90%);
     gap:15px;
     min-height: 400px;
 }
@@ -224,9 +234,12 @@ h3{
 }
 
 .blur{
-    width:100vw;
-    height:100vh;
+   
     position:absolute;
+    top:0;
+    right:0;
+    left:0;
+    bottom:0;
     background-color: black;
     opacity: 0;
     z-index: 3;
